--- a/src/app/dashboard/containers/default-layout/default-layout.component.html
+++ b/src/app/dashboard/containers/default-layout/default-layout.component.html
@@ -62,7 +62,7 @@
         <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
           <a class="btn" href="#"><i class="icon-speech"></i></a>
           <a class="btn" [routerLink]="['/dashboard']"><i class="icon-graph"></i> &nbsp;Dashboard</a>
-          <a class="btn" href="#"><i class="icon-settings"></i> &nbsp;Settings</a>
+          <a class="btn" href="#/dashboard/login?logout=true"><i class="icon-settings"></i> &nbsp;Settings</a>
         </div>
       </li>
     </ol>
