--- a/src/app/dashboard/login/login.component.html
+++ b/src/app/dashboard/login/login.component.html
@@ -4,6 +4,7 @@
       <div class="row">
         <div class="col-md-8 mx-auto">
           <div class="card-group">
+            <form action="" method="POST" (ngSubmit)="login()" novalidate>
             <div class="card p-4">
               <div class="card-body">
                 <h1>Login</h1>
@@ -12,17 +13,17 @@
                   <div class="input-group-prepend">
                     <span class="input-group-text"><i class="icon-user"></i></span>
                   </div>
-                  <input type="text" class="form-control" placeholder="Username">
+                  <input type="email" name="email" required class="form-control" placeholder="Email" [(ngModel)]="email">
                 </div>
                 <div class="input-group mb-4">
                   <div class="input-group-prepend">
                     <span class="input-group-text"><i class="icon-lock"></i></span>
                   </div>
-                  <input type="password" class="form-control" placeholder="Password">
+                  <input type="password" name="password" required class="form-control" placeholder="Password" [(ngModel)]="password">
                 </div>
                 <div class="row">
                   <div class="col-6">
-                    <button type="button" class="btn btn-primary px-4">Login</button>
+                    <button type="submit" class="btn btn-primary px-4">Login</button>
                   </div>
                   <div class="col-6 text-right">
                     <button type="button" class="btn btn-link px-0">Forgot password?</button>
@@ -30,6 +31,7 @@
                 </div>
               </div>
             </div>
+          </form>
             <div class="card text-white bg-primary py-5 d-md-down-none" style="width:44%">
               <div class="card-body text-center">
                 <div>
