--- a/src/app/dashboard/suggestion/suggestion.component.html
+++ b/src/app/dashboard/suggestion/suggestion.component.html
@@ -4,12 +4,7 @@
          <div class="successMsg" *ngIf="successMsg">{{successMsg}}</div>
          <div class="card">
             <div class="card-header">
-               <i class="fa fa-align-justify"></i> Users
-                  <div class="add-new float-right">
-                    <a [routerLink]="['add']" >
-                        <button _ngcontent-c0="" class="btn btn-primary" type="button">Add New</button>
-                    </a>    
-                  </div>
+               <i class="fa fa-align-justify"></i> Suggestion Register                  
             </div>
             <div class="card-body">
                <div class="row mb-3">
